--- a/gradle.properties
+++ b/gradle.properties
@@ -2,21 +2,21 @@
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# IntelliJ IDEA is not yet fully compatible with configuration cache,
-# see: https://github.com/FabricMC/fabric-loom/issues/1349
+# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
 org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.11
-yarn_mappings=1.21.11+build.3
-loader_version=0.18.3
-loom_version=1.14-SNAPSHOT
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.17.3
+loom_version=1.13-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
 maven_group=io.github.piscescup.mc.fabric
-archives_base_name=pc-develop-lib
+archives_base_name=pc-dev-lib
 
 # Dependencies
-fabric_version=0.139.5+1.21.11
+fabric_version=0.138.3+1.21.10
+eclipse_collections_version=11.0.0
