feature(exfunction): add exfunctions for this lib.

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,8 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 	testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
+
+	implementation 'io.vavr:vavr:0.11.0'
 	
 }
 
